<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LenDroid</string>
    <string name="settings">Settings</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="get_account_details">More Details…</string>
    <string name="loading">Loading…</string>
    <string name="browse_notes">Browse Notes…</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="review_order">Review Order</string>
    <string name="apiKey">apiKey</string>
    <string name="investorId">investorId</string>
    <string name="account_value">Account Value</string>
    <string name="available_cash">Available Cash</string>
    <string name="past_due_notes_adj">Adjustment for Past-Due Notes</string>
    <string name="adjusted_account_value">Adjusted Account Value</string>
    <string name="accrued_interest">Accrued Interest</string>
    <string name="my_account">My Account #</string>
    <string name="received_interest">Received Interest</string>
    <string name="my_notes">My Notes</string>
    <string name="notes_count">My notes</string>
    <string name="account_summary">Account Summary</string>
    <string name="a_grade_notes">A</string>
    <string name="b_grade_notes">B</string>
    <string name="c_grade_notes">C</string>
    <string name="d_grade_notes">D</string>
    <string name="e_grade_notes">E</string>
    <string name="f_grade_notes">F</string>
    <string name="g_grade_notes">G</string>
    <string name="by_grade">By Grade</string>

</resources>
